<resources>
    <string name="app_name">My News</string>

    <!-- NavigationDrawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="drawer_title_section">Section</string>
    <string name="drawer_top_stories">Top Stories</string>
    <string name="drawer_most_popular">Most Popular</string>
    <string name="drawer_section_arts">Arts</string>
    <string name="drawer_section_movies">Movies</string>
    <string name="drawer_section_multimedia">Multimedia</string>
    <string name="drawer_section_science">Science</string>
    <string name="drawer_section_travel">Travel</string>

    <!-- Toolbar -->
    <string name="toolbar_search">Search</string>
    <string name="toolbar_notification">Notifications</string>
    <string name="toolbar_help">Help</string>
    <string name="toolbar_about">About</string>

    <!-- Category Selection -->

    <!-- Search Activity Layout -->
    <string name="search_hint_edit_txt">Search query term</string>
    <string name="search_begin_date">Begin Date</string>
    <string name="search_end_date">End Date</string>
    <string name="search_button">SEARCH</string>
    <string name="search_no_articles_title">No articles found</string>
    <string name="search_no_articles_text">"There is no articles available for your research"</string>

    <!-- Notification Activity Layout -->
    <string name="notification_switch">Enable notifications (once per day)</string>

    <!-- Help -->
    <string name="help_title_notification">Enabled/Disabled notifications</string>
    <string name="help_notification">Write a keyword and select at least one section. Then click on the switch button. Just click again in the switch button to disable the notification.</string>
    <string name="help_title_search">Search for articles</string>
    <string name="help_search">Write a keyword and select at least one section. You can select a begin and a end publish date to precise your research. Then click on the search button.</string>

    <!-- Fragment -->
    <string name="fragment_error">An error occurs. Please refresh.</string>

    <!-- Recycler View -->
    <string name="recycler_view_image">The image of the article</string>
    <string name="recycler_view_category">Category</string>
    <string name="recycler_view_date">Date</string>
    <string name="recycler_view_title">Title</string>

    <!-- About -->
    <string name="about_description">This is the version 1.0 of MyNews</string>
    <string name="about_contact">For more information, feel free to contact me at: \n<i>emmanuelle.em.menard@gmail.com</i></string>

</resources>
