<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/category_selection_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:rowCount="3" >

    <CheckBox
        android:id="@+id/category_selection_movies"
        android:paddingEnd="100dp"
        android:text="@string/drawer_section_movies"
        tools:ignore="RtlSymmetry"
        android:theme="@style/Switch"/>

    <CheckBox
        android:id="@+id/category_selection_science"
        android:text="@string/drawer_section_science"
        android:theme="@style/Switch"/>
    <CheckBox
        android:id="@+id/category_selection_travel"
        android:text="@string/drawer_section_travel"
        android:theme="@style/Switch"/>
    <CheckBox
        android:id="@+id/category_selection_arts"
        android:text="@string/drawer_section_arts"
        android:theme="@style/Switch"/>

    <CheckBox
        android:id="@+id/category_selection_multimedia"
        android:text="@string/drawer_section_multimedia"
        android:theme="@style/Switch"/>


</GridLayout>