<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_activity_main_search"
        android:icon="@drawable/search_24px"
        app:showAsAction="ifRoom"
        android:title="@string/toolbar_search">
    </item>
    <item
        android:id="@+id/menu_activity_main_notifications"
        app:showAsAction="never"
        android:title="@string/toolbar_notification">
    </item>
    <item
        android:id="@+id/menu_activity_main_help"
        app:showAsAction="never"
        android:title="@string/toolbar_help">
    </item>
    <item
        android:id="@+id/menu_activity_main_about"
        app:showAsAction="never"
        android:title="@string/toolbar_about">
    </item>
</menu>